@@ -1,12 +1,7 @@
 /**
 \section intro Introduction
 
-This package includes general extensions to KineoWorks software. 
+This package defines input output functions related to KineoWorks objects
 
-\section extensions KineoWorks Extensions
-
-The extensions implemented in this package are the following:
-\li a Reeds and Shepp steering method,
-\li a flatness based steering method.
 */
 
